--- a/vision/pipelines/config/runtime_config.yaml
+++ b/vision/pipelines/config/runtime_config.yaml
@@ -1,7 +1,7 @@
-movie_path: /home/fruitspec-lab/Downloads/0.8m1stm/ZED_1.svo
-output_folder:  /home/fruitspec-lab/Downloads/0.8m1stm/output
-output_folder_track: $(output_folder)/tracking
-output_folder_annotate: $(output_folder)/annotation
+movie_path: /home/fruitspec-lab/FruitSpec/Data/test_tag/Result_FSI.mkv
+output_folder: /home/fruitspec-lab/FruitSpec/Data/test_tag/
+output_folder_track: ${output_folder}/tracking
+output_folder_annotate: ${output_folder}/annotation
 
 frame_size:  [1920, 1080] # [2048, 1536]
 rotate: 2 # 0: no rotate, 1: COUNTERCLOCKWISE, 2: CLOCKWISE
