--- a/application/DataManager/data_config.yaml
+++ b/application/DataManager/data_config.yaml
@@ -16,4 +16,4 @@ request_timeout: 10
 service_endpoint: "https://counter-api.fruitspec.com/api/post_block"
 upload_bucket_name: fruitspec-counter
 upload_prefix: uploads
-timestamp_format: '%d/%m/%y %H:%M:%S.%f'
+timestamp_format: '%Y-%m-%d %H:%M:%S.%f'
