--- a/vision/pipelines/config/dual_runtime_config.yaml
+++ b/vision/pipelines/config/dual_runtime_config.yaml
@@ -40,7 +40,7 @@ rgb_jai:
 frame_size: [2048, 1536]
 
 debug:
-  tracker_windows: false
+  tracker_windows: true
   tracker_results: false
   det_results: false
   raw_frame: false
@@ -49,6 +49,7 @@ debug:
   trees: false
   features: false
   align_graph: true
+  clusters: false
   run_type: RGB_siftv1_kp_equalize # align graph naming
 
 
