--- a/application/utils/config.yaml
+++ b/application/utils/config.yaml
@@ -3,7 +3,7 @@ upload_prefix: uploads
 counter_number: 8
 logs_path: "~/Desktop/counter_logs/"
 log_name: "log"
-GUI: false
+GUI: true
 autonomous_acquisition: true
 customer_code: "MOTCHA"
-use_strace: true
+use_strace: false
