--- a/application/DataManager/data_config.yaml
+++ b/application/DataManager/data_config.yaml
@@ -7,6 +7,7 @@ uploaded_path: /home/mic-730ai/Desktop/uploaded.log
 output_path: /home/mic-730ai/Desktop
 file_prefix: 0
 alignment: alignment
+jai_translation: jai_translation
 tracks: tracks
 jaized_timestamps: jaized_timestamps
 success: success
