--- a/vision/pipelines/config/pipeline_config.yaml
+++ b/vision/pipelines/config/pipeline_config.yaml
@@ -69,7 +69,7 @@ sensor_aligner:
     homography: false
 
 frame_loader:
-  mode: sync_mkv # sync_mkv, async,  sync_svo
+  mode: sync_svo # sync_mkv, async,  sync_svo
 
 
 filters:
