--- a/application/utils/config.yaml
+++ b/application/utils/config.yaml
@@ -1,9 +1,10 @@
 upload_bucket_name: fsCounter
 upload_prefix: uploads
-counter_number: 8
+counter_number: 4
 logs_path: "~/Desktop/counter_logs/"
 log_name: "log"
 GUI: false
 autonomous_acquisition: true
 customer_code: "MOTCHA"
 use_strace: false
+collect_data: false
