--- a/application/DataManager/data_config.yaml
+++ b/application/DataManager/data_config.yaml
@@ -14,9 +14,8 @@ success: success
 failed: failed
 use_feather: false
 request_timeout: 10
-service_endpoint: "https://counter-api.fruitspec.com/api/post_block"
-upload_bucket_name: fruitspec-counter
-upload_prefix: uploads
+service_endpoint: "https://counter-api.intgr.fruitspec.com/api/post_block"
+upload_bucket_name: fruitspec-temp-counter
 timestamp_format: '%Y-%m-%d %H:%M:%S.%f'
 date_format: "%d%m%y"
 nav_extension: "nav"
