--- a/vision/pipelines/config/pipeline_config.yaml
+++ b/vision/pipelines/config/pipeline_config.yaml
@@ -1,5 +1,6 @@
 # config.yaml
-exp_file: /home/fruitspec-lab-3/FruitSpec/Code/Lihi/fsCounter/vision/detector/yolo_x/exps/fruitspec/fs_yolox_tiny_lr_hires.py
+exp_file: /home/fruitspec-lab-3/FruitSpec/Code/Lihi/fsCounter/vision/detector/yolo_x/exps/fruitspec/fs_yolox_tiny_lr_grapes4_2.py  #grapes
+#/home/fruitspec-lab-3/FruitSpec/Code/Lihi/fsCounter/vision/detector/yolo_x/exps/fruitspec/fs_yolox_tiny_lr_hires.py
 #exp_file: /home/yotam/FruitSpec/Code/fsCounter/vision/detector/yolo_x/exps/fruitspec/fs_yolox_tiny_lr_hires.py  # counter
 #exp_file: /home/yotam/FruitSpec/Code/fsCounter/vision/detector/yolo_x/exps/fruitspec/fs_yolox_tiny_lr.py       # baseline
 #exp_file: /home/yotam/FruitSpec/Code/fsCounter/vision/detector/yolo_x/exps/fruitspec/fs_yolox_tiny_lr_syn_jai.py # pepper
@@ -13,14 +14,15 @@ exp_file: /home/fruitspec-lab-3/FruitSpec/Code/Lihi/fsCounter/vision/detector/yo
 #ckpt_file: /home/yotam/FruitSpec/weights/tomatoes/Run_28_oct_curated_2x/best_ckpt.pth # new RGB tomatoes 28/11
 #ckpt_file: /home/yotam/FruitSpec/Sandbox/Syngenta/weights/tomatoes/Run_30_oct_2022_1Class_aug_tasq/best_ckpt.pth # new RGB tomatoes 1 class 29/11
 #ckpt_file: /home/mic-730ai/Documents/Expriments/weights/Run_2_7_oct/best_ckpt.pth # RGB tasq v2
-ckpt_file: /home/fruitspec-lab-3/FruitSpec/weights/counter/Apples_1_29_June_23/best_ckpt.pth
+ckpt_file: /home/fruitspec-lab-3/FruitSpec/Sandbox/Counter/detector_grapes_train_250723/grapes_detector_4_2_250723/best_ckpt.pth
+#/home/fruitspec-lab-3/FruitSpec/weights/counter/Apples_1_29_June_23/best_ckpt.pth
 
 
 
 device: cuda
 
-input_size: [1024, 1024]
-batch_size: 4
+input_size: [416, 416]
+batch_size: 1
 
 detector:
   confidence: 0.4
@@ -38,7 +40,7 @@ tracker:
   minimal_max_distance: 10
   major: 4 #3
   minor: 0.5 #2.5
-  max_losses: 5  # 10
+  max_losses: 5  # 101024
   score_weights: [0.25, 1.0, 0.25, 0.0]  # [0.25, 1.0, 0.25, 1]
   match_type:  inter #center #
   det_area: 0.7
