--- a/vision/pipelines/config/pipeline_config.yaml
+++ b/vision/pipelines/config/pipeline_config.yaml
@@ -37,9 +37,9 @@ classes:
 
 tracker:
   minimal_max_distance: 10
-  major: 1.5 #3
-  minor: 1 #2.5
-  max_losses: 10 #5 # 10
+  major: 1.5 #1.2 #3
+  minor: 1 # 1 #2.5
+  max_losses: 5 #5 # 10
   score_weights: [0.25, 1.0, 0.5, 0.0]  # [0.25, 1.0, 0.25, 1]
   match_type:  inter #center #
   det_area: 0.7
@@ -70,7 +70,7 @@ sensor_aligner:
     homography: false
 
 frame_loader:
-  mode: sync_mkv # sync_mkv, async,  sync_svo
+  mode: sync_svo # sync_mkv, async,  sync_svo
 
 
 filters:
