--- a/application/DataManager/data_config.yaml
+++ b/application/DataManager/data_config.yaml
@@ -3,6 +3,7 @@ upload_interval: 300
 collected_path: "/home/mic-730ai/Desktop/collected.log"
 analyzed_path: "/home/mic-730ai/Desktop/analyzed.log"
 uploaded_path: "/home/mic-730ai/Desktop/uploaded.log"
+deleted_path: "/home/mic-730ai/Desktop/deleted.log"
 output_path: "/home/mic-730ai/Desktop"
 file_prefix: 0
 use_feather: false
@@ -11,3 +12,7 @@ service_endpoint: "https://counter-api.intgr.fruitspec.com/api/post_block"
 upload_bucket_name: fruitspec-temp-counter
 timestamp_format: '%Y-%m-%d %H:%M:%S.%f'
 date_format: "%d%m%y"
+max_disk_occupancy: 70
+min_disk_occupancy: 50
+storage_cleanup_min_files: 3
+storage_cleanup_size_threshold: 100
