--- a/vision/detector/yolo_x/.readthedocs.yaml
+++ b/vision/detector/yolo_x/.readthedocs.yaml
@@ -18,4 +18,4 @@ python:
    version: "3.7"
    install:
    - requirements: docs/requirements-doc.txt
-   - requirements: requirements.txt
+   - requirements: requirements_lg.txt
