--- a/vision/pipelines/config/dual_runtime_config.yaml
+++ b/vision/pipelines/config/dual_runtime_config.yaml
@@ -43,7 +43,7 @@ rgb_jai:
 frame_size: [2048, 1536]
 
 debug:
-  tracker_windows: true
+  tracker_windows: false
   tracker_results: false
   det_results: false
   raw_frame: false
@@ -51,7 +51,7 @@ debug:
   tracker: None
   trees: false
   features: false
-  align_graph: true
+  align_graph: false
   clusters: false
   run_type: RGB_siftv1_kp_equalize # align graph naming
 
