--- a/application/utils/consts.yaml
+++ b/application/utils/consts.yaml
@@ -32,3 +32,7 @@ failed: "failed"
 nav_extension: "nav"
 routine: "Routine"
 urgent: "Urgent"
+
+s3_nav_folder: "counter_navs"
+s3_log_folder: "counter_logs"
+s3_jaized_folder: "counter_jaized"
