--- a/application/utils/consts.yaml
+++ b/application/utils/consts.yaml
@@ -6,7 +6,7 @@ log_extension: "log"
 global_polygon: "global"
 startup_script: "/home/mic-730ai/Desktop/startup_counter.sh"
 
-GPS_timestamp: "timestamp"
+GPS_timestamp: "GPS_timestamp"
 GPS_latitude: "latitude"
 GPS_longitude: "longitude"
 GPS_plot: "plot"
