--- a/vision/pipelines/config/dual_runtime_config.yaml
+++ b/vision/pipelines/config/dual_runtime_config.yaml
@@ -57,15 +57,15 @@ debug:
 adt_debugger:
   scan_type: "multi_scans"
   row_path: /home/matans/Documents/fruitspec/sandbox/VALENCIA/debugger_test/row_1/1 # path to row for analyzing, this should be a path to the fodler contatning all the files if we have multi scans
-  block_path: "/media/fruitspec-lab/TEMP SSD/USA_June/June_13/HC3BLK25/130623" # path to block for analyzing, if "" will run only on row
-  include_rows: ["all"] # which rows to analyze if it includes "all" will run on all
+  block_path: "/media/fruitspec-lab/cam175/customers_new/MOTCHA/BEERAMU0/220823" # path to scan date for analyzing, if "" will run only on row
+  include_rows: ["row_2"] # which rows to analyze if it includes "all" will run on all
   include_scans: ["all"] # which scans indexes to analyze if it includes "all" will run on all
   rotate: true # flag for rotating video
   frames_limit: [0, 5] # frames to analyze in video
   fps: 10 # fps for writing the movie if 0 will use original fps
   new_vid_name: "" # name for new video: "" is for default value (Result_FSI_{side}_with_dets.mkv)
   outputs_dir: /media/fruitspec-lab/easystore/debugging/ # where to dump the images
-  block_suffix: _HC3_apples_new_detector # suffix for output dir naming
+  block_suffix: _aligment # suffix for output dir naming
   t_index: 6 # index of tracker
   methods: [jai_frame_w_dets, alignment, trees] # which methods to use: ("vid_with_dets", "jai_frame_w_dets", "alignment", "trees")
   alignment_methods: ["", "depth", "min_samp_depth"] # which alignment filtering styles to use ("", "depth", "min_samp", "min_samp_depth")
