debug mode: - network logging - syslog

--- a/application/Analysis/analysis_config.yaml
+++ b/application/Analysis/analysis_config.yaml
@@ -1,4 +1,5 @@
 citrus:
+  exposure_log: True
   autonomous_easy_config: true
   default_weather: clear
   default_acquisition_parameters:
@@ -28,6 +29,7 @@ citrus:
   max_batches: 30
 
 apple:
+  exposure_log: True
   autonomous_easy_config: true
   default_weather: clear
   default_acquisition_parameters:
