--- a/application/DataManager/data_config.yaml
+++ b/application/DataManager/data_config.yaml
@@ -18,3 +18,5 @@ max_disk_occupancy: 70
 min_disk_occupancy: 35
 storage_cleanup_min_files: 3
 storage_cleanup_size_threshold: 100
+crash_syslog: True
+network_log: True
