--- a/application/utils/consts.yaml
+++ b/application/utils/consts.yaml
@@ -15,6 +15,8 @@ bytes_recv: "bytes_recv"
 network_sample_timestamp: "network_sample_timestamp"
 network_log: "network"
 
+jtop_log: "jtop"
+
 log_dir: "/home/mic-730ai/Desktop/counter_logs/"
 log_name: "log"
 log_extension: "log"
