results_collector - mode
adts_loader - percent seen

fe_pipline - direction from metadata

feature_extractor_class - percent seen

percent_seen -floor segmentation

--- a/vision/feature_extractor/feature_extractor_config.yaml
+++ b/vision/feature_extractor/feature_extractor_config.yaml
@@ -71,7 +71,7 @@ debug:
   preprocess:
     apply: false
     preprocess_saving_folder: "/media/fruitspec-lab/easystore/testing_playground"
-  3d_space: true
+  3d_space: false
   3d_animation: false
 
 logger:
