--- a/application/GPS/GPS_config.yaml
+++ b/application/GPS/GPS_config.yaml
@@ -4,3 +4,6 @@ GPS_device_name: "/dev/ttyUSB1"
 kml_path: "/home/mic-730ai/Desktop/Blocks.kml"
 led_exe_path: "/home/mic-730ai/fruitspec/fsCounter/application/utils/diotest"
 led_blink_sleep_time: 0.2
+no_gps_in_plot_limit: 300
+sample_count_threshold: 20
+minimal_time_in_state: 3
